# siparse

./: Cargo.toml  README.md  build.rs
benches/: parse.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_chunk_size.rs  parse_headers.rs  parse_request.rs
src/: iter.rs  lib.rs
src/simd/: avx2.rs  mod.rs  sse42.rs
tests/: uri.rs
